more recommendations, plus sorting recs

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,26 +2,8 @@
 
 	<div class="wrapper">
 
-		<h2 class="footer-heading">{{ site.title }}</h2>
+		<p class="text">Copyright &copy; 2015 Michael R. Fleet</p>
 
-		<div class="footer-col-wrapper">
-			<div class="footer-col  footer-col-1">
-				<ul class="contact-list">
-					<li>something</li>
-				</ul>
-			</div>
-
-			<div class="footer-col  footer-col-2">
-				<ul class="social-media-list">
-					<li>something else
-					</li>
-				</ul>
-			</div>
-
-			<div class="footer-col  footer-col-3">
-				<p class="text">something different</p>
-			</div>
-		</div>
 
 	</div>
 
