Added dynamic copyright end date.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,7 @@
 
 	<div class="wrapper">
 
-		<p class="text">Copyright &copy; 2015 Michael R. Fleet</p>
-
+		<p class="text">Copyright &copy; 2009-{{ 'now' | date: "%Y" }} Michael R. Fleet</p>
 
 	</div>
 
