--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -236,6 +236,22 @@
 }
 
 /**
+* Pages navigation
+**/
+.pages ul
+{
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+}
+
+.pages li
+{
+	display: inline;
+	padding-right: 1em;
+}
+
+/**
 * Skills
 **/
 #skills li
