--- a/_layouts/blog_by_category.html
+++ b/_layouts/blog_by_category.html
@@ -2,28 +2,5 @@
 layout: default
 ---
 
-<div class="home">
-
-	<ul class="post-list">
-		{% for post in site.categories[page.category] %}
-			<li>
-				<article class="post">
-
-					<header class="post-header">
-						<span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
-						{% if post.title != '' %}
-						<h2>
-							<a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
-						</h2>
-						{% endif %}
-					</header>
-
-					<section class="post-content">
-						{{ post.content }}
-					</section>
-
-				</article>
-			</li>
-		{% endfor %}
-	</ul>
-</div>
+{% assign posts=site.categories[page.category] %}
+{% include post.html posts=posts %}
