Cleanup/cultivation of Photos posts.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -166,7 +166,10 @@
 }
 
 .page-heading {
-		font-size: 20px;
+	background-color: #eee;
+	font-size: 20px;
+	font-weight: bold;
+	padding-left: 8px;
 }
 
 .post-list {
