Thieves oil post

--- a/_includes/post.html
+++ b/_includes/post.html
@@ -7,7 +7,7 @@
 				<article class="post">
 
 					<header class="post-header">
-						<span class="post-meta"><a href="{{ post.url | prepend: site.baseurl }}">{{ post.date | date: "%b %-d, %Y %H:%M:%S" }}</a></span>
+						<span class="post-meta"><a href="{{ post.url | prepend: site.baseurl }}">{{ post.date | date: "%b %-d, %Y %H:%M" }}</a></span>
 						{% if post.title != '' %}
 						<h2>
 							<a class="post-link" href="{% if post.link %}{{ post.link }}{% else %}{{ post.url | prepend: site.baseurl }}{% endif %}">{{ post.title }}</a>
