--- a/css/print.scss
+++ b/css/print.scss
@@ -138,15 +138,15 @@ ul
 	{
 		display: inline;
 		font-weight: normal;
-
-		&:after
-		{
-			content: " | ";
-		}
 	}
 
 	h5
 	{
+		&:before
+		{
+			content: " | ";
+		}
+
 		display: inline;
 		font-weight: normal;
 		margin: 0;
