--- a/_includes/education.html
+++ b/_includes/education.html
@@ -3,11 +3,16 @@
 	<header class="post-header">
 		<h3 class="post-title">{{ post.school }}</h3>
 		<h4>{{ post.field }}</h2>
+		{% capture fifteen_years_ago %}{{ 'now' | date: "%Y" | minus: 15 }}{% endcapture %}
+		{% capture end_year %}{{ post.end_date | date: "%Y" }}{% endcapture %}
+
+		{% if fifteen_years_ago < end_year %}
 		<h5 class="post-meta">
 			<time datetime="{{post.date}}">{{ post.date | date: "%Y" }}</time>
 			–
 			<time datetime="{{post.end_date}}">{{ post.end_date | date: "%Y" }}</time>
 		</h5>
+		{% endif %}
 	</header>
 
 	<section class="post-content">
